--- a/TRx.Handlers/TRx.Handlers.csproj
+++ b/TRx.Handlers/TRx.Handlers.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="IndicatorOnBarMaDeviation.cs" />
     <Compile Include="MakeClosePositionSignalByPointsOnBar.cs" />
+    <Compile Include="MeanReversOnBar - definition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IndicatorOnBar2Ma.cs" />
     <Compile Include="MeanReversOnBar.cs" />
