--- a/TRL.Common/TRL.Common.csproj
+++ b/TRL.Common/TRL.Common.csproj
@@ -139,6 +139,10 @@
     <Compile Include="Handlers\UpdateOrderAmountOnTrade.cs" />
     <Compile Include="Handlers\UpdateOrderOnOrderDeliveryConfirmation.cs" />
     <Compile Include="Handlers\UpdatePositionOnTrade.cs" />
+    <Compile Include="Helpers\ArrayHelper.cs" />
+    <Compile Include="Helpers\Class1.cs" />
+    <Compile Include="Helpers\Converter.cs" />
+    <Compile Include="Helpers\DelegateHelper.cs" />
     <Compile Include="Models\ArbitrageSettings.cs" />
     <Compile Include="Models\BarBuilder.cs" />
     <Compile Include="Models\BarSettings.cs" />
