--- a/TRL.Connect.Smartcom/TRL.Connect.Smartcom.csproj
+++ b/TRL.Connect.Smartcom/TRL.Connect.Smartcom.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Events\SmartComBinder.cs" />
     <Compile Include="Models\UpdateOrderExtensions.cs" />
     <Compile Include="Net\SmartComConnector.cs" />
+    <Compile Include="QuantConnect\BrokerageSmartCom.cs" />
     <Compile Include="SmartCom.cs" />
     <Compile Include="SmartComEventsTypes.cs" />
     <Compile Include="Models\RawOrder.cs" />
@@ -146,6 +147,10 @@
     <ProjectReference Include="..\TRL.Configuration\TRL.Configuration.csproj">
       <Project>{f21d2504-efac-41b0-a799-a2534a2066f2}</Project>
       <Name>TRL.Configuration</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TRL.Connect\TRL.Connect.csproj">
+      <Project>{04dd5070-b502-4412-92e9-96ef486952af}</Project>
+      <Name>TRL.Connect</Name>
     </ProjectReference>
     <ProjectReference Include="..\TRL.Logging\TRL.Logging.csproj">
       <Project>{b2c1c965-bfd2-40d4-ad7d-e9c4b55c5f30}</Project>
