--- a/TRL.Connect/TRL.Connect.csproj
+++ b/TRL.Connect/TRL.Connect.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TRL.Connect</RootNamespace>
     <AssemblyName>TRL.Connect</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -57,7 +58,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Brokerage.cs" />
+    <Compile Include="BrokerageException.cs" />
+    <Compile Include="BrokerageFactory.cs" />
+    <Compile Include="IBrokerage.cs" />
+    <Compile Include="IBrokerageFactory.cs" />
+    <Compile Include="ISymbolMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TRL.Common\TRL.Common.csproj">
+      <Project>{5882134e-de9b-4e9e-9074-617b5ee31af0}</Project>
+      <Name>TRL.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
