--- a/TRL.Connect.Smartcom/TRL.Connect.Smartcom.csproj
+++ b/TRL.Connect.Smartcom/TRL.Connect.Smartcom.csproj
@@ -110,7 +110,7 @@
     <Compile Include="Data\MarketDataProvider.cs" />
     <Compile Include="Events\SmartComBinder.cs" />
     <Compile Include="Models\UpdateOrderExtensions.cs" />
-    <Compile Include="Net\SmartComConnector.cs" />
+    <Compile Include="SmartComConnector.cs" />
     <Compile Include="QuantConnect\BrokerageSmartCom.cs" />
     <Compile Include="SmartCom.cs" />
     <Compile Include="SmartComEventsTypes.cs" />
@@ -135,10 +135,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
+    <None Include="Diagrams\CodeMapConnector.dgml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Diagrams\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\TRL.Common\TRL.Common.csproj">
       <Project>{5882134e-de9b-4e9e-9074-617b5ee31af0}</Project>
