--- a/TRL.Connect/TRL.Connector.csproj
+++ b/TRL.Connect/TRL.Connector.csproj
@@ -63,6 +63,7 @@
     <Compile Include="BrokerageFactory.cs" />
     <Compile Include="IBrokerage.cs" />
     <Compile Include="IBrokerageFactory.cs" />
+    <Compile Include="IConnector.cs" />
     <Compile Include="ISymbolMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
