--- a/TRL.Common.Test/TRL.Common.Test.csproj
+++ b/TRL.Common.Test/TRL.Common.Test.csproj
@@ -335,6 +335,10 @@
       <Project>{f21d2504-efac-41b0-a799-a2534a2066f2}</Project>
       <Name>TRL.Configuration</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TRL.Connect\TRL.Connector.csproj">
+      <Project>{04dd5070-b502-4412-92e9-96ef486952af}</Project>
+      <Name>TRL.Connector</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TRL.Emulation\TRL.Emulation.csproj">
       <Project>{8d45f99b-ae4d-4521-8ec1-186628d58575}</Project>
       <Name>TRL.Emulation</Name>
