--- a/TRL.Connect.Smartcom.Test/TRL.Connect.Smartcom.Test.csproj
+++ b/TRL.Connect.Smartcom.Test/TRL.Connect.Smartcom.Test.csproj
@@ -163,6 +163,10 @@
       <Project>{5882134e-de9b-4e9e-9074-617b5ee31af0}</Project>
       <Name>TRL.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TRL.Connect\TRL.Connector.csproj">
+      <Project>{04dd5070-b502-4412-92e9-96ef486952af}</Project>
+      <Name>TRL.Connector</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TRL.Emulation\TRL.Emulation.csproj">
       <Project>{8d45f99b-ae4d-4521-8ec1-186628d58575}</Project>
       <Name>TRL.Emulation</Name>
