--- a/TRS.Trader/TRS.TestBack.CrossMa1/TRS.TestBack.CrossMa1.csproj
+++ b/TRS.Trader/TRS.TestBack.CrossMa1/TRS.TestBack.CrossMa1.csproj
@@ -143,35 +143,35 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TRL.Common\TRL.Common.csproj">
+    <ProjectReference Include="..\..\TRL.Common\TRL.Common.csproj">
       <Project>{5882134e-de9b-4e9e-9074-617b5ee31af0}</Project>
       <Name>TRL.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRL.Connect.Smartcom\TRL.Connect.Smartcom.csproj">
+    <ProjectReference Include="..\..\TRL.Connect.Smartcom\TRL.Connect.Smartcom.csproj">
       <Project>{5ce1582e-32b5-466f-91fc-465c9d4b3d5b}</Project>
       <Name>TRL.Connect.Smartcom</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRL.Emulation\TRL.Emulation.csproj">
+    <ProjectReference Include="..\..\TRL.Emulation\TRL.Emulation.csproj">
       <Project>{8d45f99b-ae4d-4521-8ec1-186628d58575}</Project>
       <Name>TRL.Emulation</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRL.Handlers\TRL.Handlers.csproj">
+    <ProjectReference Include="..\..\TRL.Handlers\TRL.Handlers.csproj">
       <Project>{574d19eb-e390-43fd-958c-88f438ebfb89}</Project>
       <Name>TRL.Handlers</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRL.Logging\TRL.Logging.csproj">
+    <ProjectReference Include="..\..\TRL.Logging\TRL.Logging.csproj">
       <Project>{b2c1c965-bfd2-40d4-ad7d-e9c4b55c5f30}</Project>
       <Name>TRL.Logging</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRL.Transaction\TRL.Transaction.csproj">
+    <ProjectReference Include="..\..\TRL.Transaction\TRL.Transaction.csproj">
       <Project>{53013b47-c5cc-4a49-9535-192c5ba6f3bc}</Project>
       <Name>TRL.Transaction</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRx.Handlers\TRx.Handlers.csproj">
+    <ProjectReference Include="..\..\TRx.Handlers\TRx.Handlers.csproj">
       <Project>{5c264f1f-ab22-44a2-ac8b-7eb6d743d46d}</Project>
       <Name>TRx.Handlers</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRx.Helpers\TRx.Helpers.csproj">
+    <ProjectReference Include="..\..\TRx.Helpers\TRx.Helpers.csproj">
       <Project>{259cb4d5-447a-40c0-82dd-2fcb92c850d3}</Project>
       <Name>TRx.Helpers</Name>
     </ProjectReference>
