--- a/TRS.Trader/TRS.Trader.BackTest/TRS.Trader.BackTest.csproj
+++ b/TRS.Trader/TRS.Trader.BackTest/TRS.Trader.BackTest.csproj
@@ -112,27 +112,27 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TRL.Common\TRL.Common.csproj">
+    <ProjectReference Include="..\..\TRL.Common\TRL.Common.csproj">
       <Project>{5882134e-de9b-4e9e-9074-617b5ee31af0}</Project>
       <Name>TRL.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRL.Connect.Smartcom\TRL.Connect.Smartcom.csproj">
+    <ProjectReference Include="..\..\TRL.Connect.Smartcom\TRL.Connect.Smartcom.csproj">
       <Project>{5ce1582e-32b5-466f-91fc-465c9d4b3d5b}</Project>
       <Name>TRL.Connect.Smartcom</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRL.Emulation\TRL.Emulation.csproj">
+    <ProjectReference Include="..\..\TRL.Emulation\TRL.Emulation.csproj">
       <Project>{8d45f99b-ae4d-4521-8ec1-186628d58575}</Project>
       <Name>TRL.Emulation</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRL.Logging\TRL.Logging.csproj">
+    <ProjectReference Include="..\..\TRL.Logging\TRL.Logging.csproj">
       <Project>{b2c1c965-bfd2-40d4-ad7d-e9c4b55c5f30}</Project>
       <Name>TRL.Logging</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRL.Message\TRL.Message.csproj">
+    <ProjectReference Include="..\..\TRL.Message\TRL.Message.csproj">
       <Project>{d79dfb3c-b753-42bd-9a56-0ad9616321cf}</Project>
       <Name>TRL.Message</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRL.Transaction\TRL.Transaction.csproj">
+    <ProjectReference Include="..\..\TRL.Transaction\TRL.Transaction.csproj">
       <Project>{53013b47-c5cc-4a49-9535-192c5ba6f3bc}</Project>
       <Name>TRL.Transaction</Name>
     </ProjectReference>
