--- a/TRS.Trader/TRS.Trader.Converter/TRS.Trader.Converter.csproj
+++ b/TRS.Trader/TRS.Trader.Converter/TRS.Trader.Converter.csproj
@@ -105,27 +105,27 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TRL.Common\TRL.Common.csproj">
+    <ProjectReference Include="..\..\TRL.Common\TRL.Common.csproj">
       <Project>{5882134e-de9b-4e9e-9074-617b5ee31af0}</Project>
       <Name>TRL.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRL.Emulation\TRL.Emulation.csproj">
+    <ProjectReference Include="..\..\TRL.Emulation\TRL.Emulation.csproj">
       <Project>{8d45f99b-ae4d-4521-8ec1-186628d58575}</Project>
       <Name>TRL.Emulation</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRL.Logging\TRL.Logging.csproj">
+    <ProjectReference Include="..\..\TRL.Logging\TRL.Logging.csproj">
       <Project>{b2c1c965-bfd2-40d4-ad7d-e9c4b55c5f30}</Project>
       <Name>TRL.Logging</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRL.Message\TRL.Message.csproj">
+    <ProjectReference Include="..\..\TRL.Message\TRL.Message.csproj">
       <Project>{d79dfb3c-b753-42bd-9a56-0ad9616321cf}</Project>
       <Name>TRL.Message</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRL.Transaction\TRL.Transaction.csproj">
+    <ProjectReference Include="..\..\TRL.Transaction\TRL.Transaction.csproj">
       <Project>{53013b47-c5cc-4a49-9535-192c5ba6f3bc}</Project>
       <Name>TRL.Transaction</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TRx.Helpers\TRx.Helpers.csproj">
+    <ProjectReference Include="..\..\TRx.Helpers\TRx.Helpers.csproj">
       <Project>{259cb4d5-447a-40c0-82dd-2fcb92c850d3}</Project>
       <Name>TRx.Helpers</Name>
     </ProjectReference>
