--- a/TRx.Program/App.config
+++ b/TRx.Program/App.config
@@ -1,39 +1,57 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
+    <!-- Connection -->
     <add key="Host" value="mxdemo.ittrade.ru" />
     <add key="Port" value="8443" />
-    <add key="Login" value="SBH8MJFJ" />
-    <add key="Password" value="YFS76L" />
-    <add key="ConsoleWaitStart" value="true" />
-    <add key="SignalHub" value="true" />
-    <add key="BrokerServerTimezone" value="Russian Standard Time" />
-    <add key="MeasureStopFromSignalPrice" value="false" />
-    <add key="MeasureProfitFromSignalPrice" value="false" />
+    <add key="Login" value="H0YBTEU4" />
+    <add key="Password" value="T8351J" />
     <add key="ConnectionAwaitingAttempts" value="5" />
     <add key="SecondsBetweenConnectionAwaitingAttempts" value="5" />
+    <!-- Listen -->
     <add key="OrderBookDepth" value="50" />
     <add key="ListenPortfolio" value="true" />
     <add key="ListenQuotes" value="false" />
     <add key="ListenTicks" value="true" />
     <add key="ListenBidAsk" value="false" />
+    <!-- -->
+    <add key="BrokerServerTimezone" value="Russian Standard Time" />
+    <add key="MeasureStopFromSignalPrice" value="false" />
+    <add key="MeasureProfitFromSignalPrice" value="false" />
+    <!-- Настройки логов -->
     <add key="ServerLogFilePath" value="." />
     <add key="ServerLogLevel" value="5" />
     <add key="ClientLogFilePath" value="." />
     <add key="ClientLogLevel" value="5" />
-    <add key="Portfolio" value="ST71321-RF-01" />
-    <add key="Symbol" value="Si-9.15_FT" />
-    <add key="Amount" value="1" />
-    <add key="Interval" value="40" />
-    <add key="Period" value="12" />
-    <add key="StopPoints" value="10" />
-    <add key="ProfitPoints" value="20" />
-    <add key="MaFast" value="4" />
-    <add key="MaSlow" value="12" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <!-- Экспорт данных -->
+    <add key="ExportBarsOnExit" value="true" />
+    <add key="ExportSignalsOnExit" value="true" />
     <add key="ExportOrdersOnExit" value="true" />
     <add key="ExportTradesOnExit" value="true" />
-    <add key="ExportBarsOnExit" value="true" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="ExportDealsOnExit" value="true" />
+    <add key="ExportIndicatorsOnExit" value="true" />
+    <add key="SignalHub" value="true" />
+    <!-- Экспорт данных -->
+    <add key="ConsoleWaitStart" value="true" />
+    <!-- Параметры счета -->
+    <add key="Portfolio" value="ST78511-RF-01" />
+    <add key="Symbol" value="Si-3.16_FT" />
+    <add key="Amount" value="1" />
+    <!-- Параметры бара -->
+    <add key="Interval" value="30" />
+    <add key="Period" value="12" />
+    <!-- Параметры стратегии -->
+    <add key="MaPeriod" value="12" />
+    <add key="КоличествоУровней" value="4" />
+    <add key="ШагУровней" value="40" />
+    <!-- Параметры стопов -->
+    <add key="StopPoints" value="10" />
+    <add key="ProfitPoints" value="20" />
+    <!-- Параметры стратегии 1 скользящих -->
+    <add key="MaFast" value="4" />
+    <add key="MaSlow" value="12" />
+    <!-- -->
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
