--- a/TRx.Handlers/TRx.Handlers.csproj
+++ b/TRx.Handlers/TRx.Handlers.csproj
@@ -48,14 +48,14 @@
     <Compile Include="SourcePriceOnBar.cs" />
     <Compile Include="IndicatorOnBarMaDeviation.cs" />
     <Compile Include="MakeClosePositionSignalByPointsOnBar.cs" />
-    <Compile Include="MeanReversOnBar - definition.cs" />
+    <Compile Include="ReversMaDeOnBar - definition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IndicatorOnBar2Ma.cs" />
-    <Compile Include="MeanReversOnBar.cs" />
-    <Compile Include="ReversOnBar_v1.cs" />
-    <Compile Include="ReversOnBar.cs" />
-    <Compile Include="ReversOnBar_v0.cs" />
-    <Compile Include="ReversOnTick.cs" />
+    <Compile Include="ReversMaDeOnBar.cs" />
+    <Compile Include="ReversMaOnBar_v1.cs" />
+    <Compile Include="ReversMaOnBar.cs" />
+    <Compile Include="ReversMaOnBar_v0.cs" />
+    <Compile Include="ReversMaOnTick.cs" />
     <Compile Include="StopLossOnBar.cs" />
     <Compile Include="TakeProfitOnBar.cs" />
   </ItemGroup>
