--- a/TRx.Indicators/TRx.Indicators.csproj
+++ b/TRx.Indicators/TRx.Indicators.csproj
@@ -44,11 +44,12 @@
     <Compile Include="Helper.cs" />
     <Compile Include="Indicator.Cross.cs" />
     <Compile Include="Indicator.Difference.cs" />
+    <Compile Include="Indicator.SimpleMovingAverage.cs" />
     <Compile Include="Indicator.Lowest.cs" />
     <Compile Include="Indicator.Highest.cs" />
     <Compile Include="Levels.cs" />
     <Compile Include="Indicator.xATL.cs" />
-    <Compile Include="Indicator.Ema.cs" />
+    <Compile Include="Indicator.ExponentialMovingAverage.cs" />
     <Compile Include="Indicator.MomentumOscillatorChande.cs" />
     <Compile Include="Indicator.Vidya.cs" />
     <Compile Include="Math.Helper.cs" />
